Fix icons getting cut off, fix dropdown links not including icons, add dropdown icons to docs

--- a/packages/studiocms_ui/src/components/Dropdown/dropdown.css
+++ b/packages/studiocms_ui/src/components/Dropdown/dropdown.css
@@ -120,17 +120,24 @@
 }
 
 .sui-dropdown-option {
-	padding: .5rem .75rem;
 	cursor: pointer;
 	font-size: .975em;
 	transition: all .15s ease;
 	display: flex;
 	flex-direction: row;
-	gap: .5rem;
 	align-items: center;
 	width: 100%;
 	white-space: normal;
 	user-select: none;
+}
+
+.sui-dropdown-line-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: .5rem .75rem;
+	width: 100%;
+	gap: .5rem;
 }
 
 .sui-dropdown-option:hover,
@@ -144,7 +151,6 @@
 }
 
 .sui-dropdown-link {
-	padding: .5rem .75rem;
 	width: 100%;
 	text-decoration: none;
 	color: hsl(var(--text-normal));
@@ -213,6 +219,6 @@
 	justify-content: space-between;
 }
 
-.sui-dropdown-option.has-icon {
+.sui-dropdown-option.has-icon .sui-dropdown-line-container {
 	padding-left: .5rem;
 }
